--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,9 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+
 bind -n M-H previous-window
 bind -n M-L next-window
 
