adds catppuccin theme for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,5 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
-
 bind -n M-H previous-window
 bind -n M-L next-window
 
@@ -36,6 +32,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'catppuccin/tmux'
+
+set -g @catpuccin_flavour 'mocha'
 
 run '~/.tmux/plugins/tpm/tpm'
 
